# tipx

./: .gitignore  Makefile  README.md  TODO  dune  dune-project  src-export  src-logic  src-parsers  src-petrinet  src-tfg  src-walker
Formats/: selt-logic  tina-net
Nets/: Airplane-PT-0010.net  Angiogenesis.net  DLCround  FamilyReunion  PhilosophersDyn  StigComm  explore.ndr  explore.net  reduce_example.net  test_net.ndr  test_net.net
Nets/CustomTFG/: formula.selt  formula_debug.selt  model.net
Nets/DLCround/: dlcro_03_a.net  dlcro_03_b.net  dlcro_04_a.net  dlcro_04_b.net  dlcro_05_a.net  dlcro_05_b.net  dlcro_06_a.net  dlcro_06_b.net  dlcro_07_a.net  dlcro_07_b.net  dlcro_08_a.net  dlcro_08_b.net  dlcro_09_a.net  dlcro_09_b.net  dlcro_10_a.net  dlcro_10_b.net  dlcro_11_a.net  dlcro_11_b.net  dlcro_12_a.net  dlcro_12_b.net  dlcro_13_a.net  dlcro_13_b.net
Nets/PGCD/: formula.selt  formula2.selt  model.net
Nets/Various-examples/: HC-10-original.ndr  HC-5-original.ndr  HC10.ndr  K5.ndr  K5.results  PROFILING  airplane10-reduced.net  airplane100-reduced.net  airplane20-reduced.net  airplane4000-reduced.net  database02-reduced.net  database04-reduced.net  globalres3-reduced.net  hc10-reduced.net  hc10b-reduced.net  hc10c-reduced.net  hc10d-reduced.net  hc5-reduced.net  ibm319-reduced.net  ibm5964-reduced.net  ibm703-reduced.net  k5-reduced.net  not-simple-reduced.net  not-simple.ndr  referendum1000.net  referendum20.net  sample.net  simple-reduced.net  simple.ndr
lib/common/: _tags  bitarray.ml  bitarray.mli  bytehelp.ml  bytehelp.mli  cache.ml  cache.mli  common.ml  date2s.ml  dune  dune-project  extArray.ml  extArray.mli  io_helper.ml  io_helper.mli  myscan.ml  myscan.mli  print_tree.ml  print_tree.mli  shared_vals.ml  shared_vals.mli  signals.ml  signals.mli  stats.ml  stats.mli
lib/common/CPS/: cpslib.ml  cpslib.mli  dune
lib/common/CompactArray/: compactArray.ml  compactArray.mli
lib/common/Files/: _tags  deserialize.ml  deserialize.mli  dune  futils.ml  futils.mli  iterfile.ml  iterfile.mli  serialize.ml  serialize.mli
lib/common/Old/: transcode.ml  transcode.mli  unionRegexp.ml
lib/common/Sets/: assoc.ml  assoc.mli  dune  frecord.ml  frecord.mli  mapp.ml  mapp.mli  memap.ml  memap.mli  meset.ml  meset.mli  setp.ml  tassoc.ml  tassoc.mli
lib/common/Strings/: alttext.ml  alttext.mli  distance.ml  distance.mli  dune  duostring.ml  duostring.mli  pcre_exc.ml  scompare.ml  scompare.mli  transcode.ml  transcode.mli  transcode_old.ml  transcode_old.mli  unionRegexp.ml  unionRegexp.mli  utf8.ml  utf8.mli
lib/lwtutils/: Makefile  asynclwt.ml  asynclwt.mli  dune  getlogin.ml  getlogin.mli  lock.ml  lock.mli  lwt_ip.ml  lwt_ip.mli  lwt_listsort.ml  lwt_listsort.mli  lwtarchive.ml  lwtarchive.mli  lwtboard.ml  lwtboard.mli  lwtdelay.ml  lwtdelay.mli  lwtfile.ml  lwtfile.mli  lwtlaunch.ml  lwtlaunch.mli  lwtplus.ml  lwtplus.mli  lwtvar.ml  lwtvar.mli  mylog.ml  mylog.mli  pipe.ml  pipe.mli  pipe_timed.ml  pipe_timed.mli  spipe.ml  spipe.mli  test_archive.ml  wv.ml  wv.mli
lib/lwtutils/Term/: dune  stackcl.ml  stackcl.mli  term.ml  term.mli  term2.ml  term2.mli
lib/lwtutils/Term/Attic/: stackcl.mli
lib/lwtutils/Term/Old-stackcl/: stackcl.ml  stackcl.mli
lib/lwtutils/Term/Old-stackcl-cps-kimarche/: stackcl.ml  stackcl.mli
lib/lwtutils/Test/: dune  lambda.ml  teststack.ml
src/cli/: dune  tipx.ml
src/logic/: bool.ml  bool.mli  dune  eval.ml  eval.mli  formula.ml  formula.mli  printformula.ml  printformula.mli
src/parsers/: dune  names.ml  names.mli  parse.ml  parse.mli  reduce.ml  reduce.mli  selt.ml  selt.mli  tina.ml  tina.mli
src/petrinet/: bitvec.ml  bitvec.mli  bitvec_pick.c  dune  intarray.ml  intarray.mli  marking.ml  marking.mli  net.ml  net.mli  printnet.ml  printnet.mli  stepper.ml  stepper.mli  trset.ml  trset.mli
src/tfg/: annotation.ml  annotation.mli  dune  printtfg.ml  printtfg.mli  projector.ml  projector.mli  tfg.ml  tfg.mli
src/walker/: dune  walk.ml  walk.mli
test/: dune  testarrays.ml  testexploration.ml  testparse.ml  testparseformula.ml  testprojection.ml  testtfg.ml  testwalk.ml  testwalkformula.ml
