(executables
 (names testparse testparseformula testexploration testarrays testwalk testwalkformula testtfg)
 (modules testparse testparseformula testexploration testarrays testwalk testwalkformula testtfg)
 (libraries petrinet logic parsers walker libtfg)

;; (instrumentation (backend landmarks)) ;; no effect unless  dune build --instrument-with landmarks  and export OCAML_LANDMARKS="auto"
 
 (preprocess (pps lwt_ppx)))



  

